与java11兼容